	failed or was not yet called so that pooled Connections will always be at a
	clean state.
	* Partially resolved issues that arise when
	CrossServerSynchronization.sendPartyMemberLogOffNotifications,
	CrossServerSynchronization.sendGuildMemberLogOffNotifications, and
	CrossServerSynchronization.sendLeaveChatroom are called in
	GameCharacter.prepareLogOff.

2013-03-06  GoldenKevin  (revision 207)

	* Fixed wrong initial rank being assigned to new guild members.
	* Fixed mobs casting too many skills.
	* Fixed Wings skill crashing the map.
	* Simplified MonsterStatusEffectTools handling of Poison Mist and Venom.
	* Fixed Blizzard/Ice Charge not freezing monsters.
	* Fixed Blind and Hamstring effects expiring almost immediately.
	* Fixed boss monsters being freezable.

2013-03-07  GoldenKevin  (revision 208)

	* Implemented guild BBS.

2013-03-10  GoldenKevin  (revision 209)

	* Sacrifice and Dragon Roar behave exactly as expected.
	* Do not continuously lose EXP when losing HP (e.g. HP decreasing regions
	such as El Nath or Aqua Road) while already dead.
	* Prevent potion or skill use while player is dead.
	* Added !queststatus command.

2013-03-13  GoldenKevin  (revision 210)

	* Fixed Combo Attack, Panic, and Coma.
	* Fixed characters being unable to do certain activities after dropping
	mesos.

2013-04-08  GoldenKevin  (revision 211)

	* Selling nonexistent items now counts as only POSSIBLE_PACKET_EDITING
	rather than CERTAIN_PACKET_EDITING due to false positives.
	* Fixed Puppet skill state being transferred by PlayerContinuation when
	changing channels.
	* Started implementing Mystic Door. Only works properly when Priest is not
	in a party.
	* Optimized party HP pushing/pulling when logging into a character that is
	in a party and when joining a party.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.